# const-checker

./: CMakeLists.txt  LICENSE.TXT  version.sh
checker/: Action.cpp  Action.h  CMakeLists.txt  ConstChecker.cpp  Consumer.cpp  Consumer.h  Exprs.cpp  Exprs.h  Methods.cpp  Methods.h  Types.cpp  Types.h  Values.h  ValuesMaybeField.cpp  ValuesMustLiteral.cpp  VariableKinds.cpp  VariableKinds.h  Worklist.h
doc/: .gitignore  clang-immutability-check.tex  latexmkrc
doc/chapter/: introduction.tex  log.tex
include/: Database.h  MethodResultTuple.h  PostgresCompliationDatabase.h
lib/: CMakeLists.txt  Database.cpp
rewriter/: Action.h  CMakeLists.txt  ConstRewriter.cpp  Consumer.h
sql/: functions.sql
